--- a/style.css
+++ b/style.css
@@ -140,3 +140,16 @@ body{
   display: block;
 }
 
+input {
+    width: 20px;
+    background: transparent;
+    border: dotted;
+    border-weight: 1px;
+    transition: all 0.3s ease-in-out;
+}
+
+input:hover {
+    border-weight: 3px;
+    width: 25px;
+}
+
