--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ body{
   display: none;
   position: absolute;
   background-color: #f9f9f9;
+  border-radius: 8px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
@@ -145,6 +146,7 @@ input {
     background: transparent;
     border: dotted;
     border-weight: 1px;
+    border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
 
