--- a/style.css
+++ b/style.css
@@ -121,12 +121,7 @@ body{
     cursor: pointer;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
+.nodropdown {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -137,8 +132,16 @@ body{
   z-index: 1;
 }
 
-.points:hover .dropdown-content {
+.dropdown {
   display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+
 }
 
 input {
