--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
     margin-right: 5px;
 }
 
-.lboard_wrap .lboard_item .points {
+.lboard_wrap .lboard_item .pointsdropdown {
     width: 100px;
     color: #3a3d51;
 }
